--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
