--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.0"
+    "discord.js": "^12.5.0",
+    "ffmpeg-static": "^4.2.7",
+    "node-opus": "^0.3.3",
+    "ytdl-core": "^4.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
