--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"node manager/index.js\" \"node timers/short/index.js\"",
+    "start": "concurrently \"node manager\" \"node timers/short\" \"node timers/long\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
