--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"node manager\" \"node timers/short\" \"node timers/long\"",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,7 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
-    "concurrently": "^5.3.0",
     "discord.js": "^12.5.0",
     "ffmpeg-static": "^4.2.7",
     "mongoose": "^5.10.16",
