--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
+    "canvas": "^2.6.1",
     "discord.js": "^12.5.0",
     "ffmpeg-static": "^4.2.7",
     "mongoose": "^5.10.16",
