--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "manager",
+  "name": "exphare",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +13,7 @@
     "@discordjs/opus": "^0.3.3",
     "canvas": "^2.6.1",
     "discord.js": "^12.5.1",
+    "express": "^4.17.1",
     "ffmpeg-static": "^4.2.7",
     "mongoose": "^5.11.4",
     "ytdl-core": "^4.1.3"
