--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "canvas": "^2.6.1",
     "discord.js": "^12.5.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "ffmpeg-static": "^4.2.7",
     "mongoose": "^5.11.4",
+    "passport": "^0.4.1",
+    "passport-discord": "^0.1.4",
     "ytdl-core": "^4.1.4"
   },
   "devDependencies": {
