--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
+    "body-parser": "^1.19.0",
     "canvas": "^2.6.1",
     "discord.js": "^12.5.1",
     "ejs": "^3.1.5",
